@@ -641,16 +641,6 @@ class Payment:
                     })
 
     @classmethod
-    def get_reject_fee(cls, payments):
-        pool = Pool()
-        JournalFailureAction = pool.get(
-            'account.payment.journal.failure_action')
-        # One reject invoice per different end_to_end_id only
-        reject_fee = JournalFailureAction.get_rejected_payment_fee(
-            payments[0].sepa_return_reason_code, payments[0].kind)
-        return reject_fee
-
-    @classmethod
     def payments_fields_to_update_after_fail(cls, reject_reason):
         fields = super(Payment, cls).payments_fields_to_update_after_fail(
             reject_reason)
