@@ -1,3 +1,4 @@
+* FEA#6663 Ajout d'un motif de rejet générique dans la configuration qui est retourné par défaut quand le motif de rejet du paiement n'est pas trouvé
 * BUG#6657 Retrait du champs "Paiements en attente" de la vue des groupes de payments
 * FEA#6588 Ajout d'un onglet à part pour les paiements rejetés réconcilés
 * OTH#0000 Correctif fichier de traduction corrompu suite à un merge.
