@@ -1,3 +1,4 @@
+* FEA#6663 Allow to have a generic default failure code in the configuration for rejected paiement which is returned by default if the payment reject code is not found.
 * BUG#6657 Remove the "Processing payments" field from payment group views
 * FEA#6588 Add tab for the reconciled rejected payments
 * OTH#0000 Fix corrupted translation file because of merge
